# djangogirlsAZPSQL

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt  startup.sh  text.txt
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_comment.py
config/: settings.py  urls.py
static_local/css/: blog.css
templates/blog/: base.html  post_detail.html  post_draft_list.html  post_list.html
templates/registration/: login.html
