[tool.poetry]
name = "djangogirls415"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
gunicorn = "^20.1.0"
unicorn = "^2.0.1.post1"
uvicorn = "^0.20.0"
whitenoise = "^6.4.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
